# autoware_rubis

./: README.md  RUBIS_README.md  verification.md
scripts/: convert_yaml_to_cpp.py  rubis_initial_pose.sh  (+3 more)
src/common/optimization/: CMakeLists.txt
src/common/optimization/include/optimization/: newtons_method_optimizer.hpp
src/localization/localization_nodes/: CMakeLists.txt  package.xml
src/localization/localization_nodes/include/localization_nodes/: localization_node.hpp
src/perception/filters/point_cloud_filter_transform_nodes/: CMakeLists.txt  package.xml
src/perception/filters/point_cloud_filter_transform_nodes/include/point_cloud_filter_transform_nodes/: point_cloud_filter_transform_node.hpp
src/perception/filters/point_cloud_filter_transform_nodes/src/: point_cloud_filter_transform_node.cpp
src/perception/filters/point_cloud_fusion_nodes/: CMakeLists.txt  package.xml
src/perception/filters/point_cloud_fusion_nodes/include/point_cloud_fusion_nodes/: point_cloud_fusion_node.hpp
src/perception/filters/point_cloud_fusion_nodes/param/: test.param.yaml  vlp16_sim_lexus_pc_fusion.param.yaml
src/perception/filters/point_cloud_fusion_nodes/src/: point_cloud_fusion_node.cpp
src/perception/filters/ray_ground_classifier_nodes/: CMakeLists.txt
src/perception/filters/ray_ground_classifier_nodes/src/: ray_ground_classifier_cloud_node.cpp  ray_ground_classifier_cloud_node.noomp
src/perception/filters/voxel_grid_nodes/: CMakeLists.txt  package.xml
src/perception/filters/voxel_grid_nodes/param/: test.param.yaml  vlp16_lexus_centroid.param.yaml
src/perception/filters/voxel_grid_nodes/src/: voxel_cloud_node.cpp
src/perception/segmentation/euclidean_cluster_nodes/: CMakeLists.txt
src/perception/segmentation/euclidean_cluster_nodes/param/: test.param.yaml  vlp16_sim_lexus_cluster.param.yaml
src/perception/segmentation/euclidean_cluster_nodes/src/: euclidean_cluster_node.cpp
src/rubis_0/: CMakeLists.txt  README.md  package.xml
src/rubis_0/design/: rubis_0-design.md
src/rubis_0/include/rubis_0/: rubis_0.hpp  rubis_0_node.hpp  visibility_control.hpp
src/rubis_0/launch/: rubis_0.launch.py  rubis_0_base.launch.py  rubis_0_plus.launch.py  rubis_minimal.launch.py  rubis_node.launch.py  rubis_rviz_lgsvl_only.launch.py
src/rubis_0/param/: convert_yaml_to_cpp.py  lgsvl_interface.param.yaml  map_publisher.param.yaml  mpc.param.yaml  object_collision_estimator.param.yaml  parking_planner_cpp.param.yaml  point_cloud_filter_transform_node.param.yaml  point_cloud_filter_transform_node_cpp.param.yaml  rubis-rviz.rviz
src/rubis_0/src/: rubis_0.cpp  rubis_0_node.cpp  rubis_0_runner_backup.cpp
src/rubis_0/test/: test_rubis_0.cpp
src/rubis_1/: CMakeLists.txt  package.xml
src/rubis_1/design/: rubis_1-design.md
src/rubis_1/include/rubis_1/: rubis_1.hpp  rubis_1_node.hpp  visibility_control.hpp
src/rubis_1/launch/: rubis_1.launch.py
src/rubis_1/src/: rubis_1.cpp  rubis_1_node.cpp  rubis_1_runner.cpp
src/rubis_1/test/: test_rubis_1.cpp
src/rubis_base/: CMakeLists.txt  package.xml
src/rubis_base/data/: SingleLaneRoad.osm  SingleLaneRoad.pcd  SingleLaneRoad.yaml  autonomoustuff.osm
src/rubis_base/design/: rubis_base-design.md
src/rubis_base/include/rubis_base/: rubis_base.hpp  rubis_base_node.hpp  visibility_control.hpp
src/rubis_base/launch/: rubis_additional.launch.py  rubis_base.launch.py  rubis_core.launch.py  rubis_main.launch.py  rubis_main2.launch.py  rubis_parking.launch.py  rubis_record.launch.py  rubis_test.launch.py
src/rubis_base/param/: euclidean_cluster.param.yaml  lanelet2_map_provider.param.yaml  map_publisher.param.yaml  ndt_localizer.param.yaml  object_collision_estimator.param.yaml  params.txt  pc_filter_transform_lidar_0.param.yaml  pc_filter_transform_lidar_1.param.yaml  pc_filter_transform_lidar_2.param.yaml  pc_filter_transform_lidar_3.param.yaml  pc_filter_transform_lidar_4.param.yaml  pc_filter_transform_lidar_5.param.yaml  pc_filter_transform_lidar_6.param.yaml  pc_filter_transform_lidar_7.param.yaml  pc_filter_transform_lidar_front.param.yaml  pc_filter_transform_lidar_rear.param.yaml  point_cloud_fusion.param.yaml  ray_ground_classifier.param.yaml  recordreplay_planner.param.yaml  rubis-rviz.rviz  rubis_detect.param.yaml  rubis_drive.param.yaml  scan_downsampler_ms3.param.yaml  vlp16_sim_lexus_filter_transform.param.yaml  vlp16_sim_lexus_pc_fusion.param.yaml  voxel_grid.param.yaml
src/rubis_base/src/: rubis_base.cpp  rubis_base_node.cpp  rubis_base_runner.cpp
src/rubis_base/test/: test_rubis_base.cpp
src/rubis_detect/: CMakeLists.txt  package.xml
src/rubis_detect/design/: rubis_detect-design.md
src/rubis_detect/include/rubis_detect/: rubis_detect.hpp  rubis_detect_node.hpp  visibility_control.hpp
src/rubis_detect/launch/: rubis_detect.launch.py
src/rubis_detect/param/: rubis_detect.param.yaml
src/rubis_detect/src/: rubis_detect.cpp  rubis_detect_node.cpp
src/rubis_detect/test/: test_rubis_detect.cpp
src/rubis_drive/: CMakeLists.txt  package.xml
src/rubis_drive/design/: rubis_drive-design.md
src/rubis_drive/include/rubis_drive/: rubis_drive.hpp  rubis_drive_node.hpp  visibility_control.hpp
src/rubis_drive/launch/: rubis_drive.launch.py
src/rubis_drive/param/: rubis_drive.param.yaml
src/rubis_drive/src/: rubis_drive.cpp  rubis_drive_node.cpp
src/rubis_drive/test/: test_rubis_drive.cpp
src/rubis_main/: CMakeLists.txt  package.xml
src/rubis_main/design/: rubis_main-design.md
src/rubis_main/include/rubis_main/: rubis_main.hpp  rubis_main_node.hpp  rubis_main_parsed.hpp  rubis_main_parsed_dev.hpp  visibility_control.hpp
src/rubis_main/launch/: rubis_main.launch.py
src/rubis_main/param/: euclidean_cluster.param.yaml  ndt_localizer.param.yaml  point_cloud_filter_transform.param.yaml  point_cloud_fusion.param.yaml  ray_ground_classifier.param.yaml  rubis_detect.param.yaml  rubis_drive.param.yaml  voxel_grid.param.yaml
src/rubis_main/src/: rubis_main.cpp  rubis_main_node.cpp  rubis_main_parsed.cpp  rubis_main_runner.cpp  rubis_main_runner_dev.cpp
src/rubis_main/test/: test_rubis_main.cpp
(+31 files in other folders)
